--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
          "files": [
-            "app/Helpers/any-helper.php"
+            "app/Helpers/any-helper.php",
+            "app/Helpers/PlanApprovalHelper.php"
         ]
     },
     "autoload-dev": {
