--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         },
          "files": [
             "app/Helpers/any-helper.php",
-            "app/Helpers/PlanApprovalHelper.php"
+            "app/Helpers/PlanApprovalHelper.php",
+            "app/Helpers/ReportApprovalHelper.php"
         ]
     },
     "autoload-dev": {
