--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,16 @@
         "php": "^8.1",
         "adldap2/adldap2-laravel": "^6.1",
         "andegna/calender": "^2.3",
+        "barryvdh/laravel-dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.0",
         "livewire/livewire": "^2.5",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.29",
+        "phpoffice/phpword": "^1.1",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
